worked on issues 1 to 5 - however got stuck

--- a/resources/css/ColmarAcademyStyle.css
+++ b/resources/css/ColmarAcademyStyle.css
@@ -13,11 +13,11 @@ header: img {
   }
 
 .flex-container1{
-    display: inline-flex;
     width: 100%;
     height: 64px;
     align-items: center;
     margin-left: 24px;
+    display: flex;
 
   }
 
@@ -26,19 +26,23 @@ header: img {
     flex-grow: 1;
   }
 
-  nav span {
-    display: inline-block;
+
+  .logo {
+    display: flex;
     padding: 20px 24px 20px 24px;
     margin-right: 30px;
   }
-
-  ul {
+/*
+.logo  ul {
     margin-right: 1rem;
   }
-
-  ul li {
-    display: inline;
+*/
+.logo ul li {
+    margin-right:1rem;
+    align-items: center;
     padding: 0 1rem;
+    text-align: right;
+
   }
   .flex-container2{
       display: flex;
